20101230:
- enhancement: hash should show up in log file
- enhancement: report last block number on volume
- enhancement: report times for each volume and tape changes
- cosmetic fix: need to convert thread ids to long for linux
- build enhancement: better cygwin and packaging environment support

20100526:
- fix: potential deadlock on SIGINT related to watermark algorithm
- fix: high watermark algorithm interferes with rate limitation

20100327:
- fix: hash calculation is omitted if no output is set
- fix: test procedure doesn't wait on Solaris 8
- some cosemtic fixes for the man page
- summary output to logfile should be independet of quiet mode

20091227:
- enforceSpeedLimit must use monotonic time source to prevent being
  disturbed by ntp
- made test suite configurable and clean-up itself
  (submitted by Peter Pentchev)
- made IPv6 code optional
- added check for block size of input device
- only determine 64bit compile flag if no CFLAGS given
- fix lockup on input error
- don't cancel non-existing thread in quiet mode
  (caused SegV on Linux)
- BSD header inclusion update
- SIGINT cancellation fixes (systems other than Solaris need a hack)

20091122:
- fix superfluous ai_flags causing error on Solaris 8
- fix assertion failure after rejected connection
- configure fix for 64-bit builds
- minor lint cleanup
- added workaround for cancellation issues on Solaris 8/9

20091110:
- fix SIGINT hanging when input is idle
- several IPv6 fixes
- compile for 64 bit by default if available

20091012:
- hash calculation is faster if done in a separate thread
- new option --hash to select other algorithms of libmhash than md5
- omit creation of superfluous inputThread in absence of status output
- fix potential race condition during startup in high watermark code
  [reported by Michal Soltys]
- reduce number of semaphore calls in high watermark code
- fix a potential deadlock on SIGINT
- fixed a typo in watermark example

20090628:
- added IPv6 support